--- a/style.css
+++ b/style.css
@@ -14,15 +14,17 @@ body{
 
 main{
     height: 100%;
-    width: 95%;
+    width: 98%;
+    min-width: 95%;
     padding: 1%;
 }
+
 
 nav{
     background: rgba(0, 0, 0, 0.185);
     height: fit-content;
     min-height: 5%;
-    width: 95%;
+    width: 96%;
     border: 2px solid black;
     padding: 1%;
     position: fixed;
@@ -50,7 +52,7 @@ nav button{
     height: fit-content;
     min-height: 30px;
     width: 20%;
-    min-width: 300px;
+    flex-basis: 300px;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
@@ -65,7 +67,8 @@ nav button{
     height: fit-content;
     min-height: 30px;
     width: 50%;
-    min-width: 800px;
+    /* min-width: 800px; */
+    flex-basis: 800px;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
@@ -86,37 +89,31 @@ footer{
 
 .hero{
     background: red;
-    height:fit-content;
-    min-height: 80%;
+    height:auto;
     width:100%;
-    padding: 1%;
-    border: 2px solid black;
-    padding-top: 3%;
+    background: url("static/images/heroLeft.png");
+    border: 2px double rgb(0, 0, 0);
     display: flex;
     flex-flow: row wrap;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content:stretch;
 }
 
 .hero_div1{
-    height: fit-content;
-    min-height: 400px;
-    width:30%;
-    min-width: 300px;
-    padding: 1%;
-    margin: 2%;
+    height: auto;
+    width:49%;
+    flex: 1 1 300px;
     border: 2px solid black;
     display: flex;
     align-items: center;
+    flex-flow: column;
 }
 
 .hero_div2{
-    height: fit-content;
-    min-height: 400px;
-    width:50%;
-    min-width: 500px;
-    padding: 1%;
-    margin: 2%;
+    height: auto;
+    width: 49%;
+    flex: 1 1 300px;
+    background: url("static/images/heroRight.png");
     border: 2px solid black;
     display: flex;
     align-items: center;
@@ -157,4 +154,63 @@ footer{
     padding: 1%;
     border: 2px solid black;
     padding-top: 3%;
+}
+
+.heading_mini{
+    margin:0;    
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: white;
+    font-weight: 600;
+    letter-spacing: 0.3em;
+    text-transform: uppercase;
+}
+
+.heading_white{
+    margin: 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: xxx-large;
+    font-weight: bold;
+    color: white;
+    text-transform: capitalize;
+    justify-content: left;
+}
+
+.heading_red{
+    margin: 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: xxx-large;
+    font-weight: bold;
+    color: red;
+    text-transform: capitalize;
+    justify-content: left;
+}
+
+
+.text_content{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: medium;
+    color:white;
+    word-spacing: 5px;
+    justify-content: center;
+    line-height: 20px;
+}
+
+
+.bg_img{
+    height: 100%;
+    width: 100%;
+}
+
+.cmn_div1{
+    margin-left: 10%;
+    margin-right: auto;
+    padding: 20px;
+}
+
+.cmn_btn{
+    min-width: 200px;
+    min-height: 50px;
+    height: auto;
+    width: auto;
+    border-radius: 10px;
 }
