--- a/style.css
+++ b/style.css
@@ -92,6 +92,7 @@ footer{
     height:auto;
     width:100%;
     background: url("static/images/heroLeft.png");
+    background-color: black;
     border: 2px double rgb(0, 0, 0);
     display: flex;
     flex-flow: row wrap;
