--- a/style.css
+++ b/style.css
@@ -10,28 +10,31 @@ body{
     height: 100%;
     width: 100%;
     overflow-x: hidden;
+    padding: 0;
+    margin: 0;
 }
 
 main{
     height: 100%;
-    width: 98%;
-    min-width: 95%;
-    padding: 1%;
+    width: 100%;
+    /* padding: 1%; */
 }
 
 
 nav{
-    background: rgba(0, 0, 0, 0.185);
+    background: rgba(0, 0, 0, 0.109);
     height: fit-content;
     min-height: 5%;
-    width: 96%;
+    width: 100%;
+    padding: 0;
+    margin: 0;
     border: 2px solid black;
-    padding: 1%;
     position: fixed;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
 }
+
 
 nav a{
     text-decoration: none;
@@ -67,7 +70,6 @@ nav button{
     height: fit-content;
     min-height: 30px;
     width: 50%;
-    /* min-width: 800px; */
     flex-basis: 800px;
     display: flex;
     flex-flow: row wrap;
@@ -77,6 +79,37 @@ nav button{
     margin-right: 4%;
     padding: 1%;
     border: 2px solid black;
+}
+
+.nav_div3{
+    height: 100%;
+    width: 100%;
+    display: none;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.nav_btn{
+    margin-left: auto;
+    margin-right: 20px;
+    color: red;
+}
+
+.nav_menu{
+    display: none;
+    flex-direction: column;
+}
+
+.nav_div3:hover .nav_menu{
+    display: flex;
+}
+.nav_div3:hover .nav_btn{
+    display: none;
+}
+
+
+.nav_mob{
+    background-color: white;
 }
 
 footer{
@@ -122,8 +155,8 @@ footer{
 
 .future{
     background: green;
-    min-height: 80%;
-    width:100%;
+    height: 100%;
+    width: 99%;
     padding: 1%;
     border: 2px solid black;
     padding-top: 3%;
@@ -214,4 +247,19 @@ footer{
     height: auto;
     width: auto;
     border-radius: 10px;
+}
+
+
+
+
+@media only screen and (max-width: 500px){
+    .nav_div1{
+        display: none;
+    }
+    .nav_div2{
+        display: none;
+    }
+    .nav_div3{
+        display: flex;
+    }
 }
