--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ nav button{
     margin: 5%;
     /* border: 2px solid black; */
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     flex-flow: column;
 }
 
@@ -203,14 +203,13 @@ nav button{
 .future_div1{
     height: auto;
     max-width: fit-content;
-    padding-left: 3%;
-    padding-right: 1%;
-    margin-left: 20px;
+    margin: 5%;
     /* border: 2px solid black; */
     display: flex;
     flex: 1 1 200px;
     flex-flow: column;
     justify-content: center;
+    align-items: flex-start;
 }
 
 .future_div2{
@@ -287,6 +286,9 @@ nav button{
     min-height: 400px;
     width: 100%;
     /* border: 1px solid black; */
+    margin-top: 3%;
+    margin-bottom: 1%;
+    margin-right: 5%;
     display:flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
@@ -297,6 +299,9 @@ nav button{
     min-height: 400px;
     width: 100%;
     /* border: 1px solid black; */
+    margin-top: 1%;
+    margin-bottom: 3%;
+    margin-right: 5%;
     display:flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
@@ -305,21 +310,25 @@ nav button{
 .today_card{
     height: 90%;
     width: 28%;
-    margin: 1%;
     min-height: 450px;
     /* border: 1px solid black; */
-    border-radius: 30px;
+    border-radius: 20px;
     display: flex;
-    flex: 1 0 300px;
+    flex: 0 1 400px;
     flex-flow: column;
     justify-content: center;
+}
+
+.today_card:hover {
+    min-height: 470px;
+    flex: 0 1 420px;
 }
 
 .tc_top{
     height: 50%;
     min-height: 225px;
     /* border: 1px solid black; */
-    border-radius: 30px;
+    border-radius: 20px;
     
 }
 .tc_mid{
@@ -334,7 +343,7 @@ nav button{
     height: 70%;
     min-height: 275px;
     /* border: 1px solid black; */
-    border-radius: 30px;
+    border-radius: 20px;
     backdrop-filter: blur(5px);
     background-image: linear-gradient(rgba(36, 38, 51, 0.37), rgb(50, 56, 87));
 }
@@ -470,7 +479,7 @@ footer{
 .img_card{
     height: 100%;
     width: 100%;
-    border-radius: 30px;
+    border-radius: 20px;
 }
 
 .cmn_div1{
