--- a/style.css
+++ b/style.css
@@ -197,6 +197,12 @@ nav button{
     align-items: center;
 }
 
+.hero_div1 .cmn_btn{
+    width: 250px;
+    min-height: 50px;
+    border:none;
+}
+
 /* HERO SECTION ENDS */
 
 /* FUTURE SECTION STARTS */
@@ -499,8 +505,8 @@ nav button{
     align-items: center;
 }
 .review_div3 .cmn_btn{
-    max-width: 10px;
-    max-height: 50px;
+    min-width: 10px;
+    height: 50px;
     background-color: rgba(240, 248, 255, 0);
     border: none;
 }
@@ -560,12 +566,14 @@ nav button{
 /* CONTACT SECTION STARTS*/
 .contact{
     background: brown;
-    min-height: 80%;
+    height: auto;
+    min-height: 700px;
     width:100%;
     border: 2px solid black;
     display: flex;
     justify-content: center;
     align-items: center;
+    background: url("./static/images/contactBg.png");
 }
 
 .contact_div1{
@@ -573,18 +581,119 @@ nav button{
     display: flex;
     flex: 1 1 700px;
     max-width: 900px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
+    margin:20px;
+    padding:20px;
     border-radius: 20px;
+    display:flex;
+    flex-flow: column;
+    justify-content: flex-start;
+    backdrop-filter: blur(5px);
 }
-/* CONTACT SECTION ENDSS*/
 
+.contact_div1_upr{
+    /* border: 1px solid black; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 30px;
+    padding-bottom: 20px;
+}
+
+.contact_div1_upr div{
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+}
+.contact_div1_upr .heading_white{
+    margin: 0;
+    padding: 0;
+}
+
+
+.contact_div1_lwr{
+    /* border: 1px solid black; */
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    min-height: 400px;
+}
+
+.contact_div1_lwr div{
+    /* border: 1px solid black; */
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    min-height: 70px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: 10px;  
+    margin-right: 10px; 
+}
+
+.contact_div1_lwr div:nth-child(4){
+    justify-content: flex-end;    
+}
+
+.contact_div1_lwr .cmn_btn{
+    min-width: 70px;
+    min-height: 40px;
+    margin:6px;
+    border:none;
+}
+
+.contact_inp{
+    height: 40px;
+    display: flex;
+    flex: 1 1 100px;
+    border-radius: 15px;
+    background-color: azure;
+    margin: 0;
+}
+
+
+/* CONTACT SECTION ENDS*/
+
+/* FOOTER SECTION STARTS*/
 footer{
     background: purple;
-    height: 5%;
+    height: auto;
+    min-height: 100px;
     width: 100%;
-    border: 2px solid black;
-    padding: 1%;
+    /* border: 1px solid black; */
+    display:flex;
+    flex-flow:column;
+    justify-content: center;
+    background: url("./static/images/footerBg.png");
 }
+
+.footer_div1{
+    margin:auto;
+    /* border: 1px solid black; */
+    display: flex;
+    flex-flow: column;
+    max-width: 700px;
+}
+
+.footer_div1 div{
+    padding:10px;
+    padding-bottom: 5px;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+.footer_div1 .text_content_white{
+    margin:0;
+}
+
+.footer_div2{
+    /* border: 1px solid black; */
+    display: flex;
+    justify-content: center;
+}
+
+/* FOOTER SECTION ENDS*/
 
 
 /* COMMON SECTION STARTS */
@@ -692,15 +801,73 @@ footer{
 }
 
 .cmn_btn{
-    min-width: 200px;
-    min-height: 50px;
+    width: 200px;
+    height: 50px;
     height: auto;
     width: auto;
     border-radius: 10px;
     color: white;
     font-weight: 500;
     background: red;
-    padding: 20px;
+    padding: auto;
+}
+
+.cmn_inp{
+    background-color: rgba(240, 248, 255, 0);
+    border:none;
+    min-height: 100%;
+    min-width: 100%;
+    padding-left:50px;
+    font-size: x-large;
+}
+
+.cmn_txtarea{
+    background-color: rgba(240, 248, 255, 0);
+    border:none;
+    min-height: 100%;
+    min-width: 100%;
+    padding-left:50px;
+    font-size: x-large;
+}
+
+input{
+    outline:none;
+}
+input:focus{
+    border-radius: inherit;
+    transform:scale(1.01);
+}
+input::placeholder{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size:x-large;
+    text-transform: capitalize;
+}
+
+textarea{
+    height: 100%;
+    width: 100%;
+    outline:none;
+    overflow: scroll;
+    padding:10px;
+    padding-right: 40px;
+}
+textarea::placeholder{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size:x-large;
+    text-transform: capitalize;
+    padding:10px;
+    padding-left:15px;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+textarea::-webkit-scrollbar {
+    display: none;
+}
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+textarea{
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
 /* COMMON SECTION ENDS */
 
